--- a/app/views/summaries/_form.html.erb
+++ b/app/views/summaries/_form.html.erb
@@ -70,7 +70,8 @@
 	    </tr>
 	    <tr>
 	      <td>Grand Total</td>
-	      <td colspan="2"><%= @summary.summary_rows.map {|x| x.in_district_trips + x.out_of_district_trips} .inject(:+) %></td>
+	      <td>&nbsp;</td>
+	      <td><%= @summary.summary_rows.map {|x| x.in_district_trips + x.out_of_district_trips} .inject(:+) %></td>
 	    </tr>
 	    <% end %>
 
