--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -13,7 +13,7 @@
       <% else %>
       <%= link_to "#{time_ago_in_words(version.valid_start)} ago", :action=>:show, :id=>version.id %>
       <% end %>
-      <span class="update-user">(<%= version.updated_by_user.name %>)</span>
+      <span class="update-user">(<%= version.updated_by_user.email %>)</span>
     </li>
   <% end %>
   </ol>
