--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -5,7 +5,7 @@
 <% if @trip.versions.count > 1 %>
 <div id="history">
   <h2>Versions</h2>
-  <ol><!-- Right now, the versions method isn't sorted at all. I suspect we'll want to add that (maybe at the model level?) -->
+  <ul><!-- Right now, the versions method isn't sorted at all. I suspect we'll want to add that (maybe at the model level?) -->
   <% @trip.chronological_versions.each do |version| %>
     <li>
       <% if (version.id == @trip.id) %>
@@ -16,13 +16,23 @@
       <span class="update-user">(<%= version.updated_by_user.email %>)</span>
     </li>
   <% end %>
-  </ol>
+  </ul>
+
+  <% if ! @trip.latest? %>
+  <br />
+  <div class="notice">You are viewing an old version created on <%= @trip.valid_start.to_s(:pretty) %></div>
+  <% end %>
+
 </div><!-- /#history -->
 <% end %>
+
 <%= form_for @trip, :url=>{:action=>:update} do |f| %>
-  <%= render :partial => "form", :locals=>{:f=>f} %>
+  <fieldset>
+    <%= render :partial => "form", :locals=>{:f=>f} %>
 
-  <br/>
+    <div class="actions">
+      <%= submit_tag 'Update' %>
+    </div>
 
-  <%= submit_tag 'Update' %>
+  </fieldset>
 <% end %>
