Remove lowdown in new user emails

--- a/app/views/new_user_mailer/new_user_email.html.erb
+++ b/app/views/new_user_mailer/new_user_email.html.erb
@@ -1,6 +1,6 @@
 Hi, <%= @user.email %><br/>
 <br/>
-You have been added as a user to LowDown.  You can visit the site at<br/>
+You have been added as a user to the Ride Connection Service Database.  You can visit the site at<br/>
 <%= @url %><br/>
 <br/>
 You have been assigned the password <%= @password %><br/>
