Adding ability to update trips, runs, and summaries without creating a new version.

--- a/app/views/summaries/show_update.html.erb
+++ b/app/views/summaries/show_update.html.erb
@@ -33,6 +33,8 @@
 
 
   <%= submit_tag 'Update' %>
+  <%= f.check_box :do_not_version, :style => "vertical-align: middle" %>
+  <%= f.label :do_not_version, "Save without versioning" %>
 <% end %>
 
 </div><!-- /.wrap -->
