--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -32,6 +32,8 @@
 
     <div class="actions">
       <%= submit_tag 'Update' %>
+      <%= f.check_box :do_not_version, :style => "vertical-align: middle" %>
+      <%= f.label :do_not_version, "Save without versioning" %>
     </div>
 
   </fieldset>
