--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -116,6 +116,26 @@
         <% end %>
       </p>
     </li>
+    
+    <li class="selfclear">
+      <%= f.label :case_manager, "Case Manager:" %>
+      <%= f.text_field :case_manager %>
+    </li>
+    
+    <li class="selfclear">
+      <%= f.label :date_enrolled, "Date Customer Enrolled:" %>
+      <%= f.text_field :date_enrolled, :class => "datepicker"  %>
+    </li>
+    
+    <li class="selfclear">
+      <%= f.label :service_end, "Customer Service End:" %>
+      <%= f.text_field :service_end, :class => "datepicker" %>
+    </li>
+    
+    <li class="selfclear">
+      <%= f.label :approved_rides, "Customer Approved Rides:" %>
+      <%= f.text_field :approved_rides, :type => "number" %>
+    </li>
   </ol>
 
   <ol class="section second">
