Moving SPD office from customers to trips; Removing some dev things from TripImport.

--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -123,6 +123,11 @@
     </li>
     
     <li class="selfclear">
+      <%= f.label :spd_office, "SPD Office:" %>
+      <%= f.text_field :spd_office %>
+    </li>
+    
+    <li class="selfclear">
       <%= f.label :date_enrolled, "Date Customer Enrolled:" %>
       <%= f.text_field :date_enrolled, :class => "datepicker"  %>
     </li>
