Adding ability for admins to create new projects, providers, and allocations.

--- a/app/views/allocations/index.html.erb
+++ b/app/views/allocations/index.html.erb
@@ -12,3 +12,5 @@
 </table>
 
 <%= will_paginate @allocations %>
+
+<%= link_to 'New Allocation', new_allocation_path, :class => "action-bttn" if current_user.is_admin %>
