Make labels consistent for paid and volunteer driver hours

--- a/app/views/summaries/_form.html.erb
+++ b/app/views/summaries/_form.html.erb
@@ -29,8 +29,8 @@
     <ol class="section summary-form-part-three">
       <li><%= f.label :total_miles, "Total Miles:" %> <%= f.text_field :total_miles %></li>
       <li><%= f.label :unduplicated_riders, "Unduplicated Riders:" %> <%= f.text_field :unduplicated_riders %></li>
-      <li><%= f.label :driver_hours_paid, "Driver Hours Paid" %> <%= f.text_field :driver_hours_paid %></li>
-      <li><%= f.label :driver_hours_volunteer, "Driver Volunteer Hours" %> <%= f.text_field :driver_hours_volunteer %></li>
+      <li><%= f.label :driver_hours_paid, "Paid Driver Hours" %> <%= f.text_field :driver_hours_paid %></li>
+      <li><%= f.label :driver_hours_volunteer, "Volunteer Driver Hours" %> <%= f.text_field :driver_hours_volunteer %></li>
       <li><%= f.label :escort_hours_volunteer, "Escort Volunteer Hours" %> <%= f.text_field :escort_hours_volunteer %></li>
       <li><%= f.label :administrative_hours_volunteer, "Admin Volunteer Hours:" %> <%= f.text_field :administrative_hours_volunteer %></li>
       <li><%= f.label :administrative, "Administrative:" %> <%= f.text_field :administrative %></li>
