Checking miles/ride option for new reports by default.

--- a/app/views/reports/show_create_report.html.erb
+++ b/app/views/reports/show_create_report.html.erb
@@ -82,7 +82,7 @@
           <li><input type="checkbox" checked name="report[fields[cost_per_trip]]" id="cost_per_trip" value="1" /> <label for="cost_per_trip">Cost/Trip</label></li>
           <li><input type="checkbox" checked name="report[fields[cost_per_mile]]" id="cost_per_mile" value="1" /> <label for="cost_per_mile">Cost/Mile</label></li>
           <li><input type="checkbox" checked name="report[fields[cost_per_hour]]" id="cost_per_hour" value="1" /> <label for="cost_per_hour">Cost/Hour</label></li>
-          <li><input type="checkbox" name="report[fields[miles_per_ride]]" id="miles_per_ride" value="1" /> <label for="miles_per_ride">Miles/Ride</label></li>
+          <li><input type="checkbox" checked name="report[fields[miles_per_ride]]" id="miles_per_ride" value="1" /> <label for="miles_per_ride">Miles/Ride</label></li>
         </ol>
 
         <ol>
