Changing summaries interface to prompt for provider instead of allocation.

--- a/app/views/summaries/index.html.erb
+++ b/app/views/summaries/index.html.erb
@@ -13,8 +13,8 @@
 
     <ol class="section fourth">
       <li>
-        <label>Allocations:</label>
-        <%= f.collection_select :allocation, @allocations, :id, :name, :include_blank => true %>
+        <label>Providers:</label>
+        <%= f.collection_select :provider, @providers, :id, :name, :include_blank => true %>
       </li>
     </ol>
 
