Changing format of dates in the results of the predefined reports.

--- a/app/views/reports/report.html.erb
+++ b/app/views/reports/report.html.erb
@@ -3,9 +3,7 @@
 </div>
 
 <p>
-  Start: <%= @start_date %> 
-  <span class="separator">|</span> 
-  End: <%= @end_date %> 
+  <%= @start_date.strftime("%B %Y") %> through <%= @end_date.strftime("%B %Y") %> 
   <span class="separator csv">|</span> 
   <%= link_to "CSV", @params.merge({:action=>:csv}), :class=>"csv" %>
 </p>
