--- a/app/views/reports/_nested_rows.html.erb
+++ b/app/views/reports/_nested_rows.html.erb
@@ -13,37 +13,7 @@
 <% else %>  
   <!-- innermost layer, render the data -->
   <% rows.each do |group_name, row| %>
-    <tr class="data">
-      <% @groups_size.times do %>
-        <td class="indent">&nbsp;</td>
-      <% end %>
-      
-      <td class="inner-most-field"><%= row.send (group_fields[0]) %></td>
-      <% if @fields.member? 'funds' %><td>$<%= '%0.2f' % row.funds %></td><%end%>
-      <% if @fields.member? 'agency_other' %><td>$<%= '%0.2f' % row.agency_other %></td><%end%>
-      <% if @fields.member? 'vehicle_maint' %><td>$<%= '%0.2f' % row.vehicle_maint %></td><%end%>
-      <% if @fields.member? 'operations' %><td>$<%= '%0.2f' % row.operations %></td><%end%>
-      <% if @fields.member? 'administrative' %><td>$<%= '%0.2f' % row.administrative %></td><%end%>
-      <% if @fields.member? 'donations' %><td>$<%= '%0.2f' % row.donations %></td><%end%>
-      <% if @fields.member? 'total' %><td>$<%= '%0.2f' % row.total %></td><%end%>
-      <% if @fields.member? 'in_district_trips' %><td><%= row.in_district_trips.to_i %></td><%end%>
-      <% if @fields.member? 'out_of_district_trips' %><td><%= row.out_of_district_trips.to_i %></td><%end%>
-      <% if @fields.member? 'total_trips' %><td><%= row.total_trips.to_i %></td><%end%>
-      <% if @fields.member? 'total_last_year' %><td><%= row.total_last_year.to_i %></td><%end%>
-      <% if @fields.member? 'mileage' %><td><%= row.mileage %></td><%end%>
-      <% if @fields.member? 'driver_volunteer_hours' %><td><%= '%0.2f' % row.driver_volunteer_hours %></td><%end%>
-      <% if @fields.member? 'driver_paid_hours' %><td><%= '%0.2f' % row.driver_paid_hours %></td><%end%>
-      <% if @fields.member? 'driver_total_hours' %><td><%= '%0.2f' % row.driver_total_hours %></td><%end%>
-      <% if @fields.member? 'cost_per_trip' %><td>$<%= '%0.2f' % row.cost_per_trip %></td><%end%>
-      <% if @fields.member? 'cost_per_mile' %><td>$<%= '%0.2f' % row.cost_per_mile %></td><%end%>
-      <% if @fields.member? 'cost_per_hour' %><td>$<%= '%0.2f' % row.cost_per_hour %></td><%end%>
-      <% if @fields.member? 'miles_per_ride' %><td><%= '%0.2f' % row.miles_per_ride %></td><%end%>
-      <% if @fields.member? 'turn_downs' %><td><%= row.turn_downs %></td><%end%>
-      <% if @fields.member? 'undup_riders' %><td><%= row.undup_riders %></td><%end%>
-      <% if @fields.member? 'escort_volunteer_hours' %><td><%= '%0.2f' % row.escort_volunteer_hours %></td><%end%>
-      <% if @fields.member? 'admin_volunteer_hours' %><td><%= '%0.2f' % row.admin_volunteer_hours %></td><%end%>
-      <% if @fields.member? 'total_volunteer_hours' %><td><%= '%0.2f' % row.total_volunteer_hours %></td><%end%>
-    </tr>
+    <%= render "row", :row => row, :label => row.send(group_fields[0]) %>
   <% end %>
 <% end %>
 
