--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -986,6 +986,13 @@ p input[type="checkbox"] {
     margin-bottom: 10px;
 }
 
+textarea#report_description {
+  width: 100%;
+  height : 50px;
+  margin-bottom: 10px;
+  
+}
+
 /* Predefined Reports */
 .report-header {
     border-bottom: 1px solid #bbb; 
