--- a/app/views/reports/report.html.erb
+++ b/app/views/reports/report.html.erb
@@ -20,6 +20,8 @@
   <%= f.hidden_field :end_date, :value=>@end_date %>
   <%= f.hidden_field :allocation_list %>
   <%= f.hidden_field :field_list %>
+  <%= f.hidden_field :description %>
+  <%= f.hidden_field :adjustment %>
 
 <p>
   <%= f.label :name, "Save this report as:" %>
