--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -9,8 +9,10 @@
 <% for report in @reports %>
 
 <div class="predefined-report">
+  
 
   <%= form_for report, :url=>{:action=>:delete_report} do |f| %>
+    <%= link_to "Edit Report", edit_report_path(report), :class => "edit" %>
     <input type="hidden" name="report[id]" value="<%= report.id %>" />
     <%= f.submit "Delete Report", :confirm=>"Are you sure you want to delete this report?", :class=>'delete-report' %>
   <% end %>
